# paroli

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindOpus.cmake
paroli-cli/: main.cpp
paroli-server/: OggOpusEncoder.cpp  OggOpusEncoder.hpp  api.cpp  main.cpp  pch.hpp
paroli-server/docs/: web_api.md
paroli-server/web-content/: index.html  index.js  pcm-player.js
piper/: inferer.hpp  piper.cpp  piper.hpp  rknn-inferer.hpp
piper-cli/: main.cpp
piper-server/: OggOpusEncoder.cpp  OggOpusEncoder.hpp  api.cpp  main.cpp
piper-server/web-content/: index.html  index.js
pipercore/: inferer.hpp  pch.hpp  piper.cpp  piper.hpp  rknn-inferer.cpp  rknn-inferer.hpp
tools/: decoder2rknn.py
